--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width,initial-scale=1">
-        <title>！！！！！</title>
-        <meta name="description" content="！！！！！">
-        <meta name="keywords" content="！！！！！">
+        <title>写真閲覧</title>
+        <meta name="description" content="写真の閲覧サイト">
+        <meta name="keywords" content="写真 画像">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.css">
         <link rel="stylesheet" href="./css/style.css">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
